--- a/src/vista/G_Completa.form
+++ b/src/vista/G_Completa.form
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="defaultCloseOperation" type="int" value="2"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -552,12 +552,12 @@
                                       <Group type="102" alignment="0" attributes="0">
                                           <Component id="jLabel12" min="-2" max="-2" attributes="0"/>
                                           <EmptySpace max="-2" attributes="0"/>
-                                          <Component id="tf_codExperto1" min="-2" pref="70" max="-2" attributes="0"/>
+                                          <Component id="tf_codExpertoCol" min="-2" pref="70" max="-2" attributes="0"/>
                                       </Group>
                                       <Group type="102" alignment="0" attributes="0">
                                           <Component id="jLabel14" min="-2" max="-2" attributes="0"/>
                                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                          <Component id="tf_codCaso1" min="-2" pref="70" max="-2" attributes="0"/>
+                                          <Component id="tf_codCasoCol" min="-2" pref="70" max="-2" attributes="0"/>
                                       </Group>
                                       <Group type="102" alignment="0" attributes="0">
                                           <Component id="jLabel15" min="-2" max="-2" attributes="0"/>
@@ -595,12 +595,12 @@
                               <Group type="102" alignment="0" attributes="0">
                                   <Group type="103" groupAlignment="3" attributes="0">
                                       <Component id="jLabel12" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="tf_codExperto1" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="tf_codExpertoCol" alignment="3" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="3" attributes="0">
                                       <Component id="jLabel14" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="tf_codCaso1" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="tf_codCasoCol" alignment="3" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
@@ -634,7 +634,10 @@
                     <Property name="text" type="java.lang.String" value="C&#xf3;digo del experto:"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JTextField" name="tf_codExperto1">
+                <Component class="javax.swing.JTextField" name="tf_codExpertoCol">
+                  <Properties>
+                    <Property name="editable" type="boolean" value="false"/>
+                  </Properties>
                 </Component>
                 <Component class="javax.swing.JLabel" name="jLabel13">
                   <Properties>
@@ -676,7 +679,10 @@
                     <Property name="text" type="java.lang.String" value="C&#xf3;digo del caso:"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JTextField" name="tf_codCaso1">
+                <Component class="javax.swing.JTextField" name="tf_codCasoCol">
+                  <Properties>
+                    <Property name="editable" type="boolean" value="false"/>
+                  </Properties>
                 </Component>
                 <Component class="com.toedter.calendar.JDateChooser" name="dc_fecha">
                   <Properties>
