--- a/src/vista/G_Completa.form
+++ b/src/vista/G_Completa.form
@@ -52,6 +52,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Refrescar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bt_RefrescarActionPerformed"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
       <Properties>
